<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SDDemo</string>
    <string name="main_title">世博大屏</string>
    <string name="ad_main_ad_advertisement">添加广告牌</string>
    <string name="ad_main_price_review">核价\/报表</string>
    <string name="main_hint">输入区域、板块、街道等查找多媒体</string>
    <string name="main_bottom_text">扫一扫</string>
    <string name="main_dialog_price">单价：10元／分钟</string>
    <string name="main_dialog_location">上海市漕河泾开发区</string>
    <string name="main_dialog_distance">距离20公里</string>
    <string name="main_dialog_detail">详细信息</string>
    <string name="main_dialog_publish">发表广告</string>
    <string name="order_count">订单%1$d个</string>
    <string name="add_ad_delete_file">"删除\n文件"</string>
    <string name="add_add_rename_file">"修改\n名称"</string>
    <string name="add_ad_upload_file">上传广告图片</string>
    <string name="add_ad_valid_time">开放时间</string>
    <string name="add_ad_detail_addr">详细地址</string>
    <string name="add_ad_device_name">设备名称</string>
    <string name="add_ad_phone_number">联系电话</string>
    <string name="add_ad_valid_time_hint">添加开放时间</string>
    <string name="add_ad_detail_addr_hint">添加详细地址</string>
    <string name="add_ad_device_name_hint">添加设备名称</string>
    <string name="add_ad_phone_number_hint">添加联系电话</string>

    <string name="ad_detail_bar_button">筛选</string>
    <string name="ad_menu_all">全部</string>
    <string name="ad_menu_display">待播放</string>
    <string name="ad_menu_need_upload">待上传</string>
    <string name="ad_menu_need_update">待更新</string>
    <string name="ad_menu_need_check">待审核</string>
    <string name="ad_detail_time">周期</string>
    <string name="ad_detail_last_time">上周期</string>
    <string name="ad_detail_current_time">今天</string>
    <string name="ad_detail_next_time">下周期</string>
    <string name = "ad_detail_monday">11/13\n星期一</string>
    <string name = "ad_detail_tuesday">11/14\n星期二</string>
    <string name = "ad_detail_wednesday">11/15\n星期三</string>
    <string name = "ad_detail_thursday">11/16\n星期四</string>
    <string name = "ad_detail_friday">11/17\n星期五</string>
    <string name = "ad_detail_saturday">11/18\n星期六</string>
    <string name = "ad_detail_sunday">11/19\n星期日</string>
    <string name="ad_detail_order_count">%1$d次</string>
    <string name="ad_order_status_display">待播放</string>
    <string name="ad_order_status_played">已播放</string>
    <string name="ad_order_status_upload">待上传</string>
    <string name="ad_order_status_update">待更新</string>
    <string name="ad_order_status_check">待审核</string>
    <string name="ad_order_status_check_not_pass">审核不过</string>

    <string name="ad_order_form_ensure">订单撤回</string>
    <string name="ad_order_time_mark">倒计时58分58秒</string>
    <string name="ad_order_upload_mark">提醒上传文件(发送短信)</string>
    <string name="ad_order_check_yes">通过</string>
    <string name="ad_order_check_no">不通过</string>
    <!--MessageAuthenticationActivity-->
    <string name="maa_authenticate">手机验证</string>
    <string name="maa_tip">请输入您的手机号码，登录“我要发广告”</string>
    <string name="maa_phone_id">+86</string>
    <string name="maa_num_hint">请输入手机号码</string>
    <string name="maa_au_num">验证码</string>
    <string name="maa_au_num_hint">请输入验证码</string>
    <string name="maa_au_num_get">获取验证码</string>
    <string name="maa_sign_in">登入</string>
    <!--AdvertisementBoardDetailInfoActivity-->
    <string name="abdi_title">详细信息</string>
    <string name="abdi_model">盛大原创古-55寸小米电视</string>
    <string name="abdi_telephone">15000654142</string>
    <string name="abdi_apparatus_detail_title">设备详情</string>
    <string name="adbi_cancel">取消</string>
    <!--two dimention-->
    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>
    <string name="openTouch">打开手电筒</string>
    <string name="closeTouch">关闭手电筒</string>

    <!--houjian add-->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_order">我的订单</string>
    <string name="user_info">用户信息</string>
    <string name="my_video">我的视频</string>
    <string name="auto_name">自动生成命名</string>
    <string name="user_rename">用户重命名</string>
    <string name="billboard_name">2017-11-06</string>
    <string name="order_info1">审核中</string>
    <string name="order_info2">审核完成</string>
    <string name="no_video_message">无片源，你需要在播放前30分钟内上传片源，以便正常审核播放，请选择片源，谢谢！</string>
    <string name="pay_message">你的片源将被上传，以便正常审核播放，确认付款吗？</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="minute_price">收费标准：10元/分钟</string>
    <string name="total_price">总价：50元</string>
    <string name="start_time">开始时间</string>
    <string name="edit_startTime">2017/11/01</string>
    <string name="upload_video">请上传视频资源</string>
    <string name="rename_video">重命名</string>
    <string name="delete_video">删除文件</string>
    <string name="playback_length">播放时长</string>
    <string name="play_default_time">5分钟（默认）</string>
    <string name="play_times">播放次数</string>
    <string name="play_default_times">一次（默认）</string>
    <string name="Advanced_Options">高级选项</string>
    <string name="Play_countdown">离播放时间还有</string>
    <string name="confirm_payment">确认付款</string>
    <string name="upload_video_name">上传片源命名</string>
    <string name="minute">分钟</string>
    <string name="date">天</string>
    <string name="select_time_erro">选择播放时间应超过当前时间30分钟以上，以便正常审核播放，请重新选择播放时间，谢谢！</string>

    <string name = "ad_monday">星期一</string>
    <string name = "ad_tuesday">星期二</string>
    <string name = "ad_wednesday">星期三</string>
    <string name = "ad_thursday">星期四</string>
    <string name = "ad_friday">星期五</string>
    <string name = "ad_saturday">星期六</string>
    <string name = "ad_sunday">星期日</string>
    <string name="ad_price_time">%1$s\-%2$s</string>
    <string name="ad_chart_time_y">个数</string>
    <string name="ad_chart_time_x">时间</string>
    <string name="ad_chart_date_y">收入</string>
    <string name="ad_chart_date_x">日期</string>
    <string name="ad_days">Days</string>

    <string name="ad_price_date_upload">待上传: 8个订单</string>
    <string name="ad_price_date_check">待审核: 11个订单</string>
    <string name="ad_price_date_update">待更新: 2个订单</string>
    <string name="ad_price_date_display">待播放: 11个订单</string>
    <string name="ad_price_order_count">共有: 32个订单</string>
    <string name="ad_price_count">总价: 11个订单</string>

    <string name ="ad_item_time_picker">时间选择器</string>
    <string name ="picker_time_confirm">确定</string>
    <string name ="picker_time_cancel">取消</string>
    <string name ="open_time">起始时间：</string>
    <string name ="close_time">终止时间：</string>
    <string name ="open_time_item">开放时间<xliff:g id="num">%1$d</xliff:g>-<xliff:g id="time">%2$s</xliff:g>-单价<xliff:g id="price">%3$s</xliff:g></string>
    <string name ="add_open_time">添加开放时间</string>
    <string name="ad_open_date">开始日期</string>
    <string name="ad_close_date">结束日期</string>
    <string name="ad_start_time">开放时间</string>
    <string name="ad_end_time">关闭时间</string>
    <string name="ad_open_time">时间段</string>
    <string name="ad_charge">收费标准</string>
    <string name="ad_time_unit">时间单位</string>
    <string name ="ad_detil_adress">详细地址</string>
    <string name="ad_name">设备名称</string>
    <string name="ad_phone">联系电话</string>
    <string name="ad_show_tips">开放时间-工作日-单价399</string>
    <string name="ad_done">完成</string>
    <string name="add_detail_address">添加详细地址</string>
    <string name="map_search">搜索</string>
    <string name="ok_text">确定</string>
    <string name="cancel_text">取消</string>
    <string name="order_name" >订单<xliff:g id="count">%1$d</xliff:g>个</string>
    <string name ="user_ad">我的广告牌</string>
    <string name="user_account">我的钱包</string>
</resources>
