<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="11.6dp"
        android:layout_marginLeft="11.3dp"
        android:layout_marginRight="11.3dp">
        <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/maa_phone_id"
            android:paddingLeft="21dp" />

        <EditText
            android:id="@+id/sd_login_phone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/maa_num_hint"
            android:textColorHint="#dadada"
            android:background="@null"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="11.6dp"
        android:layout_marginLeft="11.3dp"
        android:layout_marginRight="11.3dp"
        >
        <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/maa_au_num"
            android:gravity="center_vertical"
            android:paddingLeft="17.3dp" />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/maa_au_num_hint"
            android:layout_marginRight="9dp"
            android:textColorHint="#dadada"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/maa_au_num_get"
            android:textSize="16sp"
            android:textColor="#7b7b7b" />
    </LinearLayout>
    <TextView
        android:id="@+id/mal_log_in"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="11.6dp"
        android:layout_marginLeft="11.3dp"
        android:layout_marginRight="11.3dp"
        android:text="@string/maa_sign_in"
        android:gravity="center"
        android:textSize="20sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"/>
</LinearLayout>
    <Button
        style="@style/button_right_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/login_cancel"/>
</RelativeLayout>
