<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/order_form_time_mark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/ad_order_time_mark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/ad_order_display_back"
        style="@style/button_left_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ad_order_form_ensure" />

    <Button
        android:id="@+id/ad_order_display_cancel"
        style="@style/button_right_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</RelativeLayout>