<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/order_form_check_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/ad_order_check_yes"
        android:textSize="24sp" />
    <Button
        android:layout_below="@id/order_form_check_yes"
        android:id="@+id/order_form_check_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/ad_order_check_no"
        android:textSize="24sp" />

    <Button
        style="@style/button_right_bottom"
        android:id="@+id/ad_order_check_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</RelativeLayout>