<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:text="@string/add_detail_address"
    android:id="@+id/tv_show_address"
    android:gravity="center"
    android:textSize="20sp" />
    <LinearLayout
        android:id="@+id/ll_edit_search"
        android:layout_below="@id/tv_show_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/ad_rectangle_background">
    <EditText
        android:background="@drawable/ad_rectangle_background"
        android:layout_below="@id/tv_show_address"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:id="@+id/et_add_address"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/btn_search"
            android:text="@string/map_search"/>
    </LinearLayout>
<com.baidu.mapapi.map.MapView
    android:id="@+id/mv_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/ll_edit_search"
    android:clickable="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/tv_cancel"
        android:text="@string/ok_text"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@color/colorAccent"/>
</RelativeLayout>