<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        style="@style/button_right_bottom"
        android:id="@+id/ad_chart_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/cancel"/>

    <LinearLayout
        android:layout_above="@id/ad_chart_cancel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent">
            <TextView
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:layout_marginLeft="9dp"
                android:textSize="16sp"
                android:text="@string/ad_chart_time_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ad_chart_time_y"/>
            <TextView
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:layout_marginRight="9dp"
                android:textSize="16sp"
                android:text="@string/ad_chart_time_x"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ad_chart_time_x"/>
            <com.github.mikephil.charting.charts.LineChart
                android:layout_below="@id/ad_chart_time_y"
                android:layout_toLeftOf="@id/ad_chart_time_x"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ad_time_chart"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent">
            <TextView
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:layout_marginLeft="9dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad_chart_date_y"
                android:id="@+id/ad_chart_date_y"/>
            <TextView
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:layout_marginRight="9dp"
                android:textSize="16sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad_chart_date_x"
                android:id="@+id/ad_chart_date_x"/>
            <com.github.mikephil.charting.charts.LineChart
                android:layout_below="@id/ad_chart_date_y"
                android:layout_toLeftOf="@id/ad_chart_date_x"
                android:visibility="visible"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/ad_date_chart"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>