<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F0F0F0"
        android:text="@string/user_info"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"/>

    <RelativeLayout
        android:id="@+id/ad_show"
       android:layout_below="@id/user_info"
       android:layout_width="match_parent"
       android:layout_height="48dp">
       
       <ImageView
           android:id="@+id/image_order"
           android:layout_width="30dp"
           android:layout_marginLeft="15dp"
           android:layout_height="match_parent"
           android:src="@drawable/my_order" />"
       
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_centerVertical="true"
           android:layout_toRightOf="@id/image_order"
           android:layout_marginLeft="15dp"
           android:gravity="center"
           android:text="@string/user_ad"
           android:textSize="16sp" />
       
        <View
           android:layout_width="match_parent"
           android:layout_height="0.1dp"
           android:layout_alignParentBottom="true"
           android:background="#dbdbdb" />

    </RelativeLayout>
    
    <RelativeLayout
       android:id="@+id/user_account"
       android:layout_below="@id/ad_show"
       android:layout_width="match_parent"
       android:layout_height="48dp">
       
      <ImageView
           android:id="@+id/image_video"
           android:layout_width="30dp"
           android:layout_marginLeft="15dp"
           android:layout_height="match_parent"
           android:src="@drawable/my_video" />
       
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_centerVertical="true"
           android:layout_toRightOf="@id/image_video"
           android:layout_marginLeft="15dp"
           android:gravity="center"
           android:text="@string/user_account"
           android:textSize="16sp"/>     
    </RelativeLayout>
    
    <TextView
           android:id="@+id/cancle"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:text="@string/cancel"
           android:textSize="16sp"
           android:gravity="center"
           android:layout_alignParentBottom="true"
           android:layout_alignParentRight="true"
           android:layout_marginRight="15dp"
           android:layout_marginBottom="15dp"/>
    
</RelativeLayout>
